--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <main class="main">
                 <!-- Input Field -->
                   <div class="heigh-weight-age">
-                    <input type="number" id="height" placeholder="Enter height" />
+                    <input type="number" id="height" placeholder="Enter height in cm" />
                     <input type="number" id="weight" placeholder="Enter weight" />
                     <input type="number" id="age"    placeholder="Enter age" />
                   </div>
